<?xml version="1.0"?>
<package>
  <name>thing_gym_ros</name>
  <version>0.0.0</version>
  <description>The thing_gym_ros package</description>
  <maintainer email="trevor.ablett@robotics.utias.utoronto.ca">trevor</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
</package>